src/test/ui/transmute-equal-assoc-types.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-equal-assoc-types.rs:6:5
   |
LL |     ::std::mem::transmute(foo)
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `<F as Foo>::Bar` does not have a fixed size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
